FP-62<feat(pet): add species filter to GET /api/v1/pets endpoint refactor(pet): simplify list mapping using .toList() instead of Collectors>